--- a/style.css
+++ b/style.css
@@ -84,3 +84,169 @@ a.cabecalho__botao {
     padding: 20px;
     border: 5px  solid  #fff;
 }
+/* estilo seção 1*/
+.secao1__descricao {
+    width: 50%;
+}
+.secao1__titulo {
+    font-weight: 700;
+    font-size: 48px;
+    color: var(--preto-titulo);
+    margin-bottom: 0.2em;
+}
+.secao1__texto {
+    margin-top: 35px;
+    color: var(--preto-titulo);
+    font-size: 30px;
+}
+/* estilo seção 2*/
+.secao2__img__titulo {
+    color: var(--preto-titulo);
+    font-weight: 700;
+    font-size: 48px;
+    margin-left: 40px;
+}
+.secao2__img__subtitulo {
+    margin-top: 35px;
+    color: var(--preto-titulo);
+    font-size: 25px;
+}
+.secao1__descricao,
+.secao2__img__subtitulo {
+    padding: 2em;
+}
+.secao2__imagens {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    padding: 2em;
+}
+.secao2__imagens  img {
+    width: 95%;
+}
+.secao2__titulo {
+    margin: 50px  0px  30px  0px;
+}
+.secao2__subtitulo  h2 {
+    margin-top: 35px;
+    color: var(--preto-titulo);
+    font-size: 30px;
+}
+/* estilo seção 3*/
+.secao3__imagem {
+    background-image: url("img/mel.png");
+}
+.secao3__texto {
+    margin: 30%  0  30%  0;
+}
+.secao3__info {
+    width: 95%;
+    padding: 1em;
+    text-align: center;
+}
+/* estilo seção 4*/
+.secao4__titulo,
+.secao4__texto,
+.secao4__email,
+.secao4__fone,
+.secao4__endereco {
+    font-size: 25px;
+}
+.secao4 {
+    display: flex;
+    justify-content: space-around;
+}
+.secao4__container {
+    flex-wrap: nowrap;
+    color: var(--preto-titulo);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 20px;
+}
+.secao4__titulo {
+    font-size: 50px;
+}
+.secao4__imagem  img {
+    width: 100%;
+}
+.secao4__endereco {
+    text-align: center;
+}
+/*Seçao 5 relogio clima*/
+.relogio{
+    background-color: var(--verde-principal);
+    color: var(--preto-titulo);
+    justify-content: space-around;
+    padding: 2em;
+}
+.aba-conteudo.ativo{
+    display:block;
+}
+.aba-conteudo{
+    display: none;
+}
+.aba-conteudo-titulo-principal{
+    font-size: 28px;
+    text-align: center;
+}
+.aba-conteudo-titulo-secundario{
+    text-align: center;
+    color: var(--verde);
+    text-transform: uppercase;
+}
+.contador{
+    display:flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.contador-digito{
+    padding: 0  16px;
+    text-align: center;
+    min-width: 100px;
+}
+.contador-digito-numero{
+    font-size: 80px;
+    margin: 0;
+}
+.contador-digito-texto{
+    color: var(--preto-titulo);
+    font-size: 20px;
+    margin: 0;
+}
+/* Rodapé */
+.rodape__lista {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin-top: 1em;
+}
+.lista__link  a {
+    text-decoration: none;
+    color: var(--verde-principal);
+    margin-left: 1em;
+}
+.rodape__texto {
+    margin: 1em  0em  0em;
+    color: var(--verde-principal);
+    font-size: 14px;
+}
+.rodape {
+    background-color: var(--verde-secundario);
+    text-align: center;
+    margin: 5em  0em  0em;
+}
+.rodape__logo {
+    max-width: 200px;
+    max-height: 200px;
+    width: auto;
+    height: auto;
+}
+.rodape__agrinho {
+    max-width: 200px;
+    max-height: 200px;
+    width: auto;
+    height: auto;
+    border-radius: 5%;
+}
