--- a/style.css
+++ b/style.css
@@ -192,3 +192,27 @@ body:hover .animated-3d {
     transform: translateY(-10px);
   }
 }
+body {
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+  background-color: #0e0e0e;
+  color: #eaeaea;
+}
+
+header, footer {
+  text-align: center;
+  padding: 20px;
+  background-color: #1b1b1b;
+}
+
+#modelo-3d {
+  width: 100%;
+  height: 80vh;
+  display: block;
+}
+
+canvas {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
