cor texto pequeno

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 }
 
 .main-nav a {
-  color: #ff8800;
+  color: #030303;
   text-decoration: none;
   font-weight: bold;
   transition: color 0.3s;
