--- a/style.css
+++ b/style.css
@@ -214,8 +214,8 @@ body {
 .animated-3d {
   width: 100px;
   height: 100px;
-  background-image: url"img/reni-removebg-preview.png"; 
-  background-size: cover;
+  background-image: url"img/reni-removebg-preview.png" ; 
+  background-size: 50%;
   background-position: center;
   margin: 30px auto;
   transform-style: preserve-3d;
