--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ body {
 .animated-3d {
   width: 100px;
   height: 100px;
-  background-image: url"img/reni-removebg-preview.png" ; 
+  background-image: url('img/reni-removebg-preview.png'); 
   background-size: 50%;
   background-position: center;
   margin: 30px auto;
@@ -222,7 +222,7 @@ body {
   transform: rotateX(0deg) rotateY(0deg);
   transition: transform 0.1s ease-out;
   border-radius: 10px;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 10px 20px rgba(255, 255, 255, 0.4);
 }
 
 /* Mouse effect handler */
