correção de cor

--- a/style.css
+++ b/style.css
@@ -247,7 +247,7 @@ body {
 header, footer {
   text-align: center;
   padding: 20px;
-  background-color: #1b1b1b;
+  background-color: #ffffff;
 }
 
 #modelo-3d {
