--- a/style.css
+++ b/style.css
@@ -240,7 +240,7 @@ body:hover .animated-3d {
 body {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
-  background-color: #0e0e0e;
+  background-color: #ffffff;
   color: #eaeaea;
 }
 
